# BookAI

./: .env  .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  test-adapter.js
.claude/: settings.local.json
adk-orchestrator/: Dockerfile  debug_agent.py  main.py  requirements.txt  test_methods.py
config/: init.sql  supabase.js  vertexai.js
frontend/public/: index.html
frontend/public/js/: chat.js
frontend/styles/: main.css
scripts/: test-api.js
src/: index.js
src/middleware/: auth.js  errorHandler.js
src/routes/: chat.js  models.js
src/services/: vertexai.js
vertex-adapter/: .env.example  Dockerfile  Makefile  cli_demo.py  pyproject.toml
vertex-adapter/src/: index.js
vertex-adapter/src/bookai_adk/: __init__.py  main.py
vertex-adapter/src/bookai_adk/agents/: __init__.py  base.py  code.py  finance.py
vertex-adapter/src/bookai_adk/api/: models.py  routes.py  routing_routes.py
vertex-adapter/src/bookai_adk/core/: config.py  llm_router.py  logging.py  orchestrator.py  vertex_llm_router.py
vertex-adapter/src/middleware/: orchestration.js
vertex-adapter/src/routes/: chat.js  models.js
vertex-adapter/src/services/: knowledgebase.js  openwebui.js  vertexai.js
